--- a/controller/build.gradle
+++ b/controller/build.gradle
@@ -8,10 +8,12 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    compile project(':model')
+    compile project(':view')
 }
 
 test {
     useJUnitPlatform()
 }
+
+group= "helloworldmvc.controller"
