--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,9 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-    compile project(':controller')
+    implementation project(':controller')
+    implementation project(':model')
+    implementation project(':view')
 }
 
 test {
